<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Menu">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_prosedur"
                    android:icon="@drawable/iteration"
                    android:title="@string/menu_prosedur" />
                <item
                    android:id="@+id/nav_daftarkerjasama"
                    android:icon="@drawable/clipboard"
                    android:title="@string/menu_daftar" />
                <item
                    android:id="@+id/nav_grafik"
                    android:icon="@drawable/diagram"
                    android:title="@string/menu_grafik" />
            </menu>
        </item>

        <item android:title="Profile">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/user"
                    android:title="@string/menu_profile" />
            </menu>
        </item>

    </group>
</menu>